# UHV-Vacuum-Automation

./: README.md
vcSamplePositioning/: CMakeLists.txt  README.md  applicationcontroller.cpp  applicationcontroller.h  contributors.txt  main.cpp  thordrive.cpp  thordrive.h  ui_vcinputwindow.h  vcuserinputwindow.cpp  vcuserinputwindow.h  vcuserinputwindow.ui  vpUeyeFrameGrabber.cpp  vpUeyeFrameGrabber.h
vcSamplePositioning/config/cam_settings/: camera160.xml~  camera2120.xml~  camera2120glass.xml~  camera2160.xml~  camera2160glass.xml~  camera2generic.xml~  camera3120.xml~  camera3120glass.xml~  camera3160.xml~  camera3160glass.xml~  cameramodels_all.xml~
vcSamplePositioning/config/cam_settings/2016-03/: camera2160.xml  camera2160.xml~  camera3160.xml  camera3160.xml~
vcSamplePositioning/config/init_files/: cam2_HM_cam3-i12.txt  cam2_i7HM.txt  cam3-i12HM.txt  modposSH_02-19.pos  modposSH_03-17.pos
vcSamplePositioning/config/model/: sampleholder-march17.cao
vcSamplePositioning/python_anglemapping/: angle_mapping.py
